--- a/molecule/aws/molecule.yml
+++ b/molecule/aws/molecule.yml
@@ -4,10 +4,13 @@ scenario:
 driver:
   name: ec2
 platforms:
-  - name: instance
-    image: ami-67589505
-    instance_type: t2.micro
+  - name: rhel7-aws
+    image: ami-67589505 
+    instance_type: t2.medium
+    ssh_user: ec2-user
     vpc_subnet_id: subnet-0225e0134a4367180
+    region: ap-southeast-2
+    security_group_vpc: ${STIG_CI_AWS_VPC_ID}
  
 provisioner:
   name: ansible
