--- a/molecule/aws/create.yml
+++ b/molecule/aws/create.yml
@@ -1,95 +1,132 @@
-- name: Create RHEL VM on aws
+---
+- name: Create
   hosts: localhost
   connection: local
   gather_facts: false
-  no_log: "{{ not (lookup('env', 'MOLECULE_DEBUG') | bool or molecule_yml.provisioner.log|default(false) | bool) }}"
   vars:
-    ssh_user: ec2-user
+    ssh_user: centos
     ssh_port: 22
-    vm_count: 1
-    security_group: 'sg-0e9563c812e6b53fc'
-    subnet_id: 'subnet-0225e0134a4367180'
-    keypair_name: 'molecule-rhel-key'
-    instance_size: 't2.micro'
-    instance_tag: 'molecule-rhel'
+
+    security_group_name: molecule
+    security_group_description: Security group for testing Molecule
+    security_group_rules:
+      - proto: tcp
+        from_port: "{{ ssh_port }}"
+        to_port: "{{ ssh_port }}"
+        cidr_ip: '0.0.0.0/0'
+      - proto: icmp
+        from_port: 8
+        to_port: -1
+        cidr_ip: '0.0.0.0/0'
+    security_group_rules_egress:
+      - proto: -1
+        from_port: 0
+        to_port: 0
+        cidr_ip: '0.0.0.0/0'
+
+    keypair_name: molecule-ssh-key
     keypair_path: "{{ lookup('env', 'MOLECULE_EPHEMERAL_DIRECTORY') }}/ssh_key"
-    ami: 'ami-67589505'
-    region: 'ap-southeast-2' 
   tasks:
+    - name: Create security group
+      ec2_group:
+        name: "{{ security_group_name }}"
+        region: "{{ item.region | default('us-east-1') }}"
+        description: "{{ security_group_name }}"
+        rules: "{{ security_group_rules }}"
+        rules_egress: "{{ security_group_rules_egress }}"
+        vpc_id: "{{ item.security_group_vpc }}"
+      loop: "{{ molecule_yml.platforms }}"
 
-  - name: Create keypair
-    ec2_key:
-      name: "{{ keypair_name }}"
-    register: keypair
+    - name: Test for presence of local keypair
+      stat:
+        path: "{{ keypair_path }}"
+      register: keypair_local
 
-  - name: Persist the keypair
-    copy:
-      dest: "{{ keypair_path }}"
-      content: "{{ keypair.key.private_key }}"
-      mode: 0600
-    when: keypair.changed
+    - name: Delete remote keypair
+      ec2_key:
+        region: "{{ lookup('env', 'STIG_CI_AWS_REGION') | default('us-east-1') }}"
+        name: "{{ keypair_name }}"
+        state: absent
+      when: not keypair_local.stat.exists
 
+    - name: Create keypair
+      ec2_key:
+        region: "{{ lookup('env', 'STIG_CI_AWS_REGION') | default('us-east-1') }}"
+        name: "{{ keypair_name }}"
+      register: keypair
 
-  - name: Create RHEL instance in ec2
-    ec2:
-      image: "{{ rhel_ami_name }}"
-      instance_type: "{{ instance_size }}"
-      key_name: "{{ ssh_key_name }}"
-      region: "{{ region }}"
-      wait: true
-      count: "{{ vm_count|int }}"
-      instance_tags: "{'Name':'{{ instance_tag }}',  'group':'{{ security_group }}'}"
-      vpc_subnet_id: "{{ subnet_id }}"
-      assign_public_ip: yes
-      group_id: "{{ security_group }}"  
-    register: ec2r
+    - name: Persist the keypair
+      copy:
+        dest: "{{ keypair_path }}"
+        content: "{{ keypair.key.private_key }}"
+        mode: 0600
+      when: keypair.changed
 
+    - name: Create molecule instance(s)
+      ec2:
+        key_name: "{{ keypair_name }}"
+        image: "{{ item.image }}"
+        instance_type: "{{ item.instance_type }}"
+        vpc_subnet_id: "{{ item.vpc_subnet_id }}"
+        group_id: "sg-02d8ca7fff243b04e"
+        region: "{{ item.region | default('us-east-1') }}"
+        instance_tags:
+          Name: Molecule Testing Instance
+          instance: "{{ item.name }}"
+        wait: true
+        assign_public_ip: true
+        exact_count: 1
+        count_tag:
+          instance: "{{ item.name }}"
+      register: server
+      loop: "{{ molecule_yml.platforms }}"
+      async: 7200
+      poll: 0
 
-  - name: Wait for SSH to come up
-    wait_for:
-      host: "{{ item.public_dns_name }}"
-      port: 22
-      delay: 60
-      timeout: 320
-      state: started
-    with_items: "{{ ec2r.instances }}"
+    - name: Wait for instance(s) creation to complete
+      async_status:
+        jid: "{{ item.ansible_job_id }}"
+      register: ec2_jobs
+      until: ec2_jobs.finished
+      retries: 300
+      loop: "{{ server.results }}"
 
-  # Mandatory configuration for Molecule to function.
-  - name: Populate instance config dict
-    set_fact:
-      instance_conf_dict: {
-        'instance': "{{ item[0].tagged_instances[0].tags.instance }}",
-        'address': "{{ item[0].tagged_instances[0].public_ip }}",
-        'region': "{{ item[0].tagged_instances[0].region }}",
-        'user': "{{ item[1].ssh_user }}",
-        'port': "{{ ssh_port }}",
-        'identity_file': "{{ keypair_path }}",
-        'instance_ids': "{{ item[0].tagged_instances[0].id }}"
-      }
-    loop: "{{ query('together', ec2_jobs.results, molecule_yml.platforms, wanttlist=True) }}"
-    register: instance_config_dict
-    when: ec2r.changed | bool
+    # Mandatory configuration for Molecule to function.
+    - name: Populate instance config dict
+      set_fact:
+        instance_conf_dict: {
+          'instance': "{{ item[0].tagged_instances[0].tags.instance }}",
+          'address': "{{ item[0].tagged_instances[0].public_ip }}",
+          'region': "{{ item[0].tagged_instances[0].region }}",
+          'user': "{{ item[1].ssh_user }}",
+          'port': "{{ ssh_port }}",
+          'identity_file': "{{ keypair_path }}",
+          'instance_ids': "{{ item[0].tagged_instances[0].id }}"
+        }
+      loop: "{{ query('together', ec2_jobs.results, molecule_yml.platforms, wanttlist=True) }}"
+      register: instance_config_dict
+      when: server.changed | bool
 
-  - name: Convert instance config dict to a list
-    set_fact:
-      instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
-    when: ec2r.changed | bool
+    - name: Convert instance config dict to a list
+      set_fact:
+        instance_conf: "{{ instance_config_dict.results | map(attribute='ansible_facts.instance_conf_dict') | list }}"
+      when: server.changed | bool
 
-  - name: Dump instance config
-    copy:
-      content: "{{ instance_conf | to_json | from_json | molecule_to_yaml | molecule_header }}"
-      dest: "{{ molecule_instance_config }}"
-    when: ec2r.changed | bool
+    - name: Dump instance config
+      copy:
+        content: "{{ instance_conf | to_json | from_json | molecule_to_yaml | molecule_header }}"
+        dest: "{{ molecule_instance_config }}"
+      when: server.changed | bool
 
-  - name: Wait for SSH
-    wait_for:
-      port: "{{ ssh_port }}"
-      host: "{{ item.address }}"
-      search_regex: SSH
-      delay: 10
-      timeout: 320
-    loop: "{{ lookup('file', molecule_instance_config) | molecule_from_yaml }}"
+    - name: Wait for SSH
+      wait_for:
+        port: "{{ ssh_port }}"
+        host: "{{ item.address }}"
+        search_regex: SSH
+        delay: 10
+        timeout: 320
+      loop: "{{ lookup('file', molecule_instance_config) | molecule_from_yaml }}"
 
-  - name: Wait for boot process to finish
-    pause:
-      minutes: 4
+    - name: Wait for boot process to finish
+      pause:
+        minutes: 2
