--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,14 +5,14 @@
       msg: "This role can only be run against RHEL 7. {{ ansible_distribution }} {{ ansible_distribution_major_version }} is not supported."
   when:
       - ansible_os_family == 'RedHat'
-      - ansible_distribution_major_version | version_compare('7', '!=')
+      - ansible_distribution_major_version is version_compare('7', '!=')
   tags:
       - always
 
 - name: Check ansible version
   fail:
       msg: You must use ansible 2.7 or greater
-  when: not ansible_version.full | version_compare('2.7', '>=')
+  when: not ansible_version.full is version_compare('2.7', '>=')
   tags:
       - always
 
@@ -21,3 +21,8 @@
   tags:
       - prelim_tasks
       - always
+
+- include: section1.yml
+  become: yes
+  tags:
+      - rhel7cis_section1
