Gitlab-runner-config-updated

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,10 @@ before_script:
 
 molecule:
   stage: test
-  tags:
-    - pip36
-    - docker
   script:
     - docker -v
     - python -V
     - pip install ansible molecule docker
     - ansible --version
     - molecule --version
-    - molecule test
+    - molecule lint
